Use node.js to serve

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
             <div class="Mt-10 Pos-r"><ul class="suggestions Pos-r D-ib Bgc-4 Bdr-r5 Fw-1"></ul></div>
         </div>
     </body>
-    <script src="./zaiquery.js"></script>
-    <script src="./autocomplete.js"></script>
+    <script src="./js/zaiquery.js"></script>
+    <script src="./js/autocomplete.js"></script>
 </html>
