--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Exercise: Auto-Complete</title>
-        <link rel="stylesheet" href="./style/normalize.css" />
-        <link rel="stylesheet" href="./style/bricks.css" />
-        <link rel="stylesheet" href="./style/theme.css" />
+        <link href="/pubic/production.css" inline></link>
     </head>
     <body class="Bgc-2">
         <div id="search" class="W-60 M-0a Mt-30 P-30 Bgc-3 Bdr-r5" style="min-width: 300px">
@@ -21,6 +19,5 @@
             <div class="Mt-10 Pos-r"><ul class="suggestions Pos-r D-ib Bgc-4 Bdr-r5 Fw-1"></ul></div>
         </div>
     </body>
-    <script src="./js/zaiquery.js"></script>
-    <script src="./js/autocomplete.js"></script>
+    <script src="./public/production.js" inline></script>
 </html>
