--- a/source/html/index.html
+++ b/source/html/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>Exercise: Auto-Complete</title>
-        <link href="../../public/production.css" inline></link>
+<!--
+        <link rel="stylesheet" href="/public/production.css" ></link>
+-->
+        <link rel="stylesheet" href="../../public/production.css" inline></link>
     </head>
     <body class="Bgc-2">
         <div id="search" class="W-60 M-0a Mt-30 P-30 Bgc-3 Bdr-r5" style="min-width: 300px">
@@ -20,4 +23,8 @@
         </div>
     </body>
     <script src="../../public/production.js" inline></script>
+<!--
+    <script src="../js/zaiquery.js"></script>
+    <script src="../js/autocomplete.js"></script>
+-->
 </html>
